--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "ts-node-dev": "^1.1.6",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.32",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37"
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
